--- a/Exercícios/Ex022/fundos001.html
+++ b/Exercícios/Ex022/fundos001.html
@@ -15,11 +15,13 @@
         }
 
         div#idq1 {
+            background-color: skyblue;
 
         }
         div#idq2 {
+            background-image: linear-gradient(to bottom,yellow,red);
 
-        }
+        }   
         div#idq3 {
             
         }
