--- a/Exercícios/Ex022/fundos001.html
+++ b/Exercícios/Ex022/fundos001.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teste de Imagem de Fundo</title>
     <style>
+        body{
+            background-image: url('imagens/wallpaper001.jpg');
+        }
+
         div.quadrado {
             display: inline-block;
             border: 1px solid black;
@@ -14,16 +18,16 @@
             background-color: lightgray;
         }
 
-        div#idq1 {
+        div#q1 {
             background-color: skyblue;
 
         }
-        div#idq2 {
+        div#q2 {
             background-image: linear-gradient(to bottom,yellow,red);
 
         }   
-        div#idq3 {
-            
+        div#q3 {
+            background-image: url('imagens/pattern003.png');
         }
     </style>
 </head>
