Teste Imagem de Fundo

--- a/Exercícios/Ex022/fundo005.html
+++ b/Exercícios/Ex022/fundo005.html
@@ -4,16 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Posicionamento</title>
-    <style>
-    body {
 
-        background-image: url("https://gustavoguanabara.github.io/html-css/imagens/mascote.png");
-    }
+    <style>
+body {
+    height: 97.5vh;    
+    background-image: url('Imagens/wallpaper002.jpg');
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;     
+
+
+}
 
     </style>
-    
 </head>
-
 <body>
     
 </body>
